# llama2.clash

./: .gitignore  Makefile  PRODUCT.md  README.md  Row State Machine Specs.md  TODO.md  TODO.txt  cabal.project  cabal.project.freeze  hie.yaml  llama2.cabal  reference_output_hc.txt  synth.sh
.Xil/Vivado-39640-tuxedo-2024/realtime/: decoder.tcl  dupFiles.rpt
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
doc/: ACTION_PLAN.txt  DATA_FLOW_DIAGRAM.txt  INTEGRATION_GUIDE.txt  QKVProjectionWithRAM.hs.ref  QUICK_REFERENCE.txt  README.txt  SUMMARY.txt  WeightBuffer.hs.ref  WeightLoaderAddressing.hs.ref  end-product.md  example_host_script.py  example_ps_script.py
docs/: plan-activation-bram-refactor.md
project/app/: Main.hs
project/llama2/: Helpers.hs  Parser.hs  SimUtils.hs  Tokenizer.hs  TraceUtils.hs
project/llama2/Helpers/: EnableWrappers.hs
project/llama2/LLaMa2/: Config.hs  Helpers.hs  ParamsPlaceholder.hs  Top.hs
project/llama2/LLaMa2/Core/: Embedding.hs  LayerController.hs  PipelineController.hs  StageEnable.hs  Transformer.hs  Types.hs
project/llama2/LLaMa2/Core/Transformer/: Internal.hs
project/llama2/LLaMa2/Decoder/: DataFlowController.hs  Decoder.hs  LayerRunner.hs  LayerStack.hs  SequenceController.hs  SimplifiedDecoder.hs  SimplifiedLayerStack.hs  SimplifiedSequenceController.hs
project/llama2/LLaMa2/Embedding/: InputEmbedding.hs  OutputProjection.hs  PRNG.hs
project/llama2/LLaMa2/Helpers/: EnableWrappers.hs  FixedPoint.hs  MatVecI8E.hs
project/llama2/LLaMa2/Layer/: Attention.hs  TransformerLayer.hs
project/llama2/LLaMa2/Layer/Attention/: AttentionHead.hs  AuxWeightBuffer.hs  FSM.hs  InputTransactionController.hs  KVCache.hs  KVCacheBankController.hs  KVWeightLoader.hs  KeyValueHeadProjector.hs  KeyValueHeadProjector.hs.hc  KeyValueHeadProjector.hs.new  LayerWeightBuffer.hs  MultiHeadAttention.hs  OnlineSoftmax.hs  OutputAccumulator.hs  OutputTransactionController.hs  QKVProjection.hs  QKVProjection.hs.future  QKVProjection.hs.hc  QKVProjection.hs.new  QKVProjection.hs.updated  QKVProjectionWeightBuffer.hs  QKVProjectionWithRAM.hs  QueryHeadProjector.hs  RotaryEncoding.hs  RowComputeUnit.hs  RowMultiplier.hs  RowScheduler.hs  WOHeadProjector.hs  WeightBuffer.hs  WeightFetchUnit.hs  WeightLoader.hs
project/llama2/LLaMa2/Layer/Components/: Quantized.hs
project/llama2/LLaMa2/Layer/FeedForward/: Activation.hs  FFNProjector.hs  FeedForwardNetwork.hs  FeedForwardNetworkWithRAM.hs
project/llama2/LLaMa2/Layer/TransformerLayer/: Internal.hs
project/llama2/LLaMa2/Layers/: TransformerLayer.hs
project/llama2/LLaMa2/Layers/Attention/: AttendSequential.hs  AttentionHead.hs  MultiHeadAttention.hs  OnlineSoftmax.hs
project/llama2/LLaMa2/Layers/Components/: Quantized.hs  (+1 more)
project/llama2/LLaMa2/Memory/: AXI.hs  ActivationBRAM.hs  AxiReadMaster.hs  AxiReadMasterReady.hs  AxiWriteMaster.hs  DualPortRAM.hs  FPVecLoader.hs  FakeAxiSlave.hs  FileBackedAxiSlave.hs  I8EDynamicRower.hs  I8EStreamParser.hs  KVCacheBank.hs  KVCacheLayout.hs  LayerAddressing.hs  RamOps.hs  SimAxiSlave.hs  WeightLoader.hs  WeightLoaderAddressing.hs  WeightLoaderAddressingExtended.hs  WeightStreaming.hs  WeightsLayout.hs
project/llama2/LLaMa2/Numeric/: Fixed.hs  FixedPoint.hs  Operations.hs  ParamPack.hs  Quantization.hs  RmsNormSeq.hs  Types.hs
project/llama2/LLaMa2/Params/: Decoder.hs
project/llama2/LLaMa2/Sampling/: Distribution.hs  Sampler.hs
project/llama2/LLaMa2/Types/: LayerData.hs  ModelConfig.hs  Parameters.hs
project/llama2/Model/: Config.hs  Helpers.hs  Top.hs  TopDebug.hs
project/llama2/Model/Config/: Debug.hs  KVGroups.hs  Quant.hs
project/llama2/Model/Core/: Embedding.hs  EmbeddingQ.hs  LayerController.hs  PipelineController.hs  StageEnable.hs  Transformer.hs  Types.hs
project/llama2/Model/Embedding/: PRNG.hs
project/llama2/Model/Helpers/: EnableWrappers.hs  Fixed.hs  FixedPoint.hs  MatVecI8E.hs  MatVecI8E_Seq.hs
project/llama2/Model/Layers/: TransformerLayer.hs
project/llama2/Model/Memory/: Addressing.hs  KVCacheBank.hs  RamOps.hs
project/llama2/Model/Numeric/: Fixed.hs  ParamPack.hs  Types.hs
project/llama2/Model/Params/: Decoder.hs
project/llama2/Simulation/: DRAMBackedAxiSlave.hs  FileBackedAxiSlave.hs  MatVecSim.hs  Parameters.hs  ParametersQuantization.hs  ParamsPlaceholder.hs  RAMBackedAxiSlave.hs  RamBackedAxiSlave.hs  SimulationTypes.hs
test/: Spec.hs
test/LLaMa2/Decoder/: DataFlowControllerSpec.hs  DecoderSpec.hs  EnableAttentionTimingSpec.hs  MultiTokenSpec.hs  TimingValidationSpec.hs
test/LLaMa2/Helpers/: MatVecI8ESpec.hs
test/LLaMa2/Layer/: TransformerLayerSpec.hs
test/LLaMa2/Layer/Attention/: AttentionHeadSpec.hs  LayerWeightBufferSpec.hs  MultiHeadAttentionSpec.hs  QKVProjectionIntegrationSpec.hs  QKVProjectionSpec.hs  WeightLoaderDebugSpec.hs  WeightLoaderSpec.hs
test/LLaMa2/Layer/FeedForward/: FeedForwardNetworkSpec.hs
test/LLaMa2/Layer/TransformerLayer/: ControlOneHeadSpec.hs
test/LLaMa2/Layers/: TransformerLayerSpec.hs
test/LLaMa2/Layers/Attention/: AttentionHeadSpec.hs  MultiHeadAttentionSpec.hs
test/LLaMa2/Layers/FeedForward/: FeedForwardNetworkSpec.hs
test/LLaMa2/Layers/TransformerLayer/: ControlOneHeadSpec.hs
test/LLaMa2/Memory/: AxiReadMasterSpec.hs  AxiWriteMasterSpec.hs  WeightLoaderSpec.hs  WeightStreamingRoundtripSpec.hs  WeightStreamingSpec.hs  WeightsLayoutRoundtripSpec.hs  WeightsLayoutSpec.hs
test/LLaMa2/Numeric/: OperationsSpec.hs  RmsNormSeqSpec.hs
test/Model/Helpers/: MatVecI8ESpec.hs
test/Model/Layers/: TransformerLayerSpec.hs
test/Model/Layers/Attention/: AttentionHeadSpec.hs  MultiHeadAttentionSpec.hs
test/Model/Layers/FeedForward/: FeedForwardNetworkSpec.hs
test/Model/Layers/TransformerLayer/: ControlOneHeadSpec.hs
test/Simulation/: AxiWriteMasterSpec.hs  BootThenLoadSpec.hs  ControllerSpec.hs  DRAMBackedAxiSlaveSpec.hs  DRAMSimpleSpec.hs  DecoderRAMWeightSpec.hs  DynamicMatMulSpec.hs  LayerEnableSpec.hs  MemoryDiagnosticSpec.hs  SingleLayerOutputSpec.hs  WeightLoaderSpec.hs  WeightLoadingDiagnosticSpec.hs
tools/: elab.tcl  synth.sh
(+70 files in other folders)
